# bmxt

./: .cursorrules  .gitignore  NOTICE  README.md  background.ts  bmxt-ui.css  package-lock.json  package.json  tab-picker-overlay.tsx
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: submit.yml
docs/: index.html
lib/: bmxt-tabs-input.ts  commands-meta.ts  tab-picker.ts
lib/commands/: types.ts
lib/commands/builtin/: activate.ts  back.ts  clear.ts  close.ts  echo.ts  focus.ts  forward.ts  group.ts  groups.ts  help.ts  index.ts  man.ts  move.ts  new.ts  windows.ts
lib/features/bmxt-window/: bmxt-terminal.tsx  text-utils.ts  use-command-history.ts  use-session-log-and-history.ts
lib/features/builtin-commands/: completion-fallback.ts  index.ts
tabs/: bmxt.tsx
wasm/bmxt-core/: Cargo.toml
wasm/bmxt-core/src/: dispatch.rs  lib.rs  line_parse.rs  meta.rs  model.rs  registry.rs  tabs_man.rs
wasm/bmxt-core/src/cmd/: ADD_COMMAND.md  activate.rs  back.rs  clear.rs  close.rs  echo.rs  exit.rs  focus.rs  forward.rs  group.rs  groups.rs  help_cmd.rs  man_page.rs  mod.rs  move_tab.rs  new_tab.rs  split_col.rs  split_row.rs  tabs.rs  windows.rs
wasm/bmxt-core/src/features/: mod.rs
wasm/bmxt-core/src/features/split/: col.rs  mod.rs  row.rs
wasm/bmxt-core/src/features/tabs_picker/: create_group_plan.rs  execute_plan.rs  group_target.rs  headline.rs  intent.rs  mod.rs  model.rs  new_window.rs  preview.rs  reducer.rs  target.rs  validate.rs
wasm/bmxt-core/src/registry/: api.rs  mod.rs  table.rs
(+46 files in other folders)
