[package]
name = "bmxt-core"
version = "0.1.0"
edition = "2021"
description = "Command shell core for BMXt (WASM): dispatch, registry, pure logic"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
